// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NEW and EDIT <UpdatedTime /> 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    format="yyyy-MM-dd HH:mm:ss OOOO"
    onClick={[Function]}
    onKeyDown={[Function]}
    readOnly={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink={false}
      htmlFor="updated_time"
      id="updated_time-label"
    >
      Updated Time
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-describedby="updated_time-helper-text"
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        id="updated_time"
        name="updated_time"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        required={false}
        type="text"
        value="2021-07-22 09:00:00 GMT-04:00"
      />
    </div>
    <p
      className="MuiFormHelperText-root"
      id="updated_time-helper-text"
    >
      Timestamp of when the DRS Object was most recently updated in ISO 8601 format.
    </p>
  </div>
</div>
`;

exports[`SHOW <UpdatedTime />  1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    format="yyyy-MM-dd HH:mm:ss OOOO"
    onClick={[Function]}
    onKeyDown={[Function]}
    readOnly={true}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink={true}
      htmlFor="updated_time"
      id="updated_time-label"
    >
      Updated Time
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-describedby="updated_time-helper-text"
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        id="updated_time"
        name="updated_time"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        required={false}
        type="text"
        value="2021-07-22 09:00:00 GMT-04:00"
      />
    </div>
    <p
      className="MuiFormHelperText-root MuiFormHelperText-filled"
      id="updated_time-helper-text"
    >
      Timestamp of when the DRS Object was most recently updated in ISO 8601 format.
    </p>
  </div>
</div>
`;
